--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,35 @@
-name: CI
+name: Test, Build, and release
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
-  build:
-    name: Build, lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
+  test:
+    name: Lint and test on Node ${{ matrix.node }} and ${{ matrix.os }}
 
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         node: ['16.x', '18.x']
-        os: [ubuntu-latest]
+        os: 
+          - ubuntu-latest
+          # - windows-latest
+          # - macOS-latest
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Use Node ${{ matrix.node }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
           cache: 'yarn'
 
       - name: Install dependencies 📦
-        run: yarn install --frozen-lockfile
+        # run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" >> ~/.npmrc
+        env:
+        run: yarn install --frozen-lockfile  --prefer-offline
 
       # - name: Lint
       #   run: yarn lint
@@ -32,5 +37,45 @@ jobs:
       # - name: Test
       #   run: yarn test --ci --coverage --maxWorkers=2
 
-      - name: Build
+      - name: Build 🏗
+        # run: yarn prepare
         run: yarn build
+
+
+  release:
+    name: Release
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Use Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'yarn'
+          registry-url: https://npm.pkg.github.com
+          always-auth: true
+          scope: '@hudora'
+    
+      - name: Install dependencies 📦
+        # run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" >> ~/.npmrc
+        run: yarn install --frozen-lockfile  --prefer-offline
+
+      - name: Build 🏗
+        # run: yarn prepare
+        run: yarn build
+
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
+
+      # - name: Deploy storybook to GitHub Pages
+      #   run: yarn run storybook-deploy --ci
+      #   env:
+      #       GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
