--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "license": "MIT",
   "author": "Dr. Maximillian Dornseif",
   "homepage": "https://github.com/mdornseif/react-use-aggrid-enterprise",
-  
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/mdornseif/react-use-aggrid-enterprise.git"
-    },
-  
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mdornseif/react-use-aggrid-enterprise.git"
+  },
+  "release": {
+    "branches": [
+      "main",
+      "next"
+    ]
+  },
   "main": "dist/index.js",
   "module": "dist/react-use-aggrid-enterprise.esm.js",
   "typings": "dist/index.d.ts",
