--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-use-aggrid-enterprise",
   "description": "Hook based initialization of AG-Grid Enterprise",
-  "version": "27.0.2",
+  "version": "28.0.0",
   "license": "MIT",
   "author": "Dr. Maximillian Dornseif",
   "homepage": "https://github.com/mdornseif/react-use-aggrid-enterprise",
@@ -76,9 +76,28 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@ag-grid-community/all-modules": "27.x.x",
-    "@ag-grid-community/react": "27.x.x",
-    "@ag-grid-enterprise/all-modules": "27.x.x",
+    "@ag-grid-community/core": "28.x.x",
+    "@ag-grid-community/styles": "28.x.x",
+    "@ag-grid-community/client-side-row-model": "28.x.x",
+    "@ag-grid-community/csv-export": "28.x.x",
+    "@ag-grid-community/react": "28.x.x",
+    "@ag-grid-enterprise/core": "28.x.x",
+    "@ag-grid-enterprise/charts": "28.x.x",
+    "@ag-grid-enterprise/sparklines": "28.x.x",
+    "@ag-grid-enterprise/clipboard": "28.x.x",
+    "@ag-grid-enterprise/column-tool-panel": "28.x.x",
+    "@ag-grid-enterprise/excel-export": "28.x.x",
+    "@ag-grid-enterprise/filter-tool-panel": "28.x.x",
+    "@ag-grid-enterprise/master-detail": "28.x.x",
+    "@ag-grid-enterprise/menu": "28.x.x",
+    "@ag-grid-enterprise/range-selection": "28.x.x",
+    "@ag-grid-enterprise/rich-select": "28.x.x",
+    "@ag-grid-enterprise/row-grouping": "28.x.x",
+    "@ag-grid-enterprise/set-filter": "28.x.x",
+    "@ag-grid-enterprise/multi-filter": "28.x.x",
+    "@ag-grid-enterprise/side-bar": "28.x.x",
+    "@ag-grid-enterprise/status-bar": "28.x.x",
+    "@ag-grid-enterprise/viewport-row-model": "28.x.x",
     "mem": "^8.1.1"
   }
 }
