--- a/package.json
+++ b/package.json
@@ -93,12 +93,14 @@
     "@tsconfig/recommended": "^1.0.1",
     "@types/react": ">=17",
     "@types/react-dom": ">=17",
+    "@vitejs/plugin-react": "^4.2.1",
     "dts-cli": "^2.0.4",
     "husky": "^9.0.11",
     "react": ">=17",
     "react-dom": ">=17",
     "tslib": "^2.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.0"
   },
   "peerDependencies": {
     "react": ">=17"
