--- a/package.json
+++ b/package.json
@@ -9,29 +9,31 @@
   },
   "license": "MIT",
   "author": "Dr. Maximillian Dornseif",
-  "main": "dist/index.mjs",
-  "module": "dist/index.umd.js",
+  "type": "module",
+  "exports": "dist/index.js",
+  "main": "dist/index..cjs",
+  "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc && vite build",
+    "build": "tsc && npx tsup --sourcemap",
     "dev": "vite",
     "lint": "dts lint",
     "prepare": "husky",
     "preview": "vite preview",
-    "start": "dts watch",
+    "size": "npx vite-bundle-visualizer -t sunburst",
     "test": "TZ=utc vitest run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "TZ=utc vitest watch",
     "unimported": "npx findead src ; npx unimported; npx depcheck",
-    "update": "npx npm-check-updates --interactive"
+    "update": "npx npm-check-updates --interactive -m"
   },
   "lint-staged": {
-    "*{css,scss,md,markdown,json,yaml,yml,graphql,html}": "prettier -w",
+    "*{css,scss,md,markdown,json,yaml,yml,graphql,html}": "npx prettier -w",
     "*{js,jsx,ts,tsx}": [
-      "prettier -w",
+      "npx prettier -w",
       "npm run lint -- --fix"
     ],
     "package*json": "sort-package-json"
@@ -91,21 +93,35 @@
     "@semantic-release/release-notes-generator": "^12.1.0",
     "@tsconfig/create-react-app": "^2.0.2",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/react": ">=17",
-    "@types/react-dom": ">=17",
+    "@types/react": ">=18",
+    "@types/react-dom": ">=18",
     "@vitejs/plugin-react": "^4.2.1",
     "dts-cli": "^2.0.4",
     "husky": "^9.0.11",
-    "react": ">=17",
-    "react-dom": ">=17",
+    "react": ">=18",
+    "react-dom": ">=18",
     "tslib": "^2.3.1",
+    "tsup": "^8.0.2",
     "typescript": "^5.3.3",
     "vitest": "^1.3.0"
   },
   "peerDependencies": {
-    "react": ">=17"
+    "react": ">=18"
   },
   "engines": {
     "node": ">=18"
+  },
+  "tsup": {
+    "bundle": true,
+    "dts": true,
+    "entry": [
+      "lib/index.ts"
+    ],
+    "format": [
+      "esm",
+      "cjs"
+    ],
+    "target": "esnext",
+    "treeshake": true
   }
 }
