fix(size): do not bundle ag-grid

--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "node": ">=18"
   },
   "tsup": {
-    "bundle": true,
+    "bundle": false,
     "dts": true,
     "entry": [
       "lib/index.ts"
