fix: Export of typings

--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "license": "MIT",
   "author": "Dr. Maximillian Dornseif",
   "type": "module",
-  "exports": "dist/index.js",
-  "main": "dist/index..cjs",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -118,8 +123,7 @@
       "lib/index.ts"
     ],
     "format": [
-      "esm",
-      "cjs"
+      "esm"
     ],
     "target": "esnext",
     "treeshake": true
