fix: further optimize exports

--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   "license": "MIT",
   "author": "Dr. Maximillian Dornseif",
   "type": "module",
-  "exports": "dist/index.js",
-  "main": "dist/index..cjs",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./package.json": "./package.json"
+  },
+  "main": "dist/index.cjs",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
